# asio-extensions

./: .gitattributes  .gitignore  .travis.yml  BUILD.gn  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  appveyor.yml  asioext_8hpp_source.html  associated__allocator_8hpp_source.html  async__result_8hpp_source.html  basic__file_8hpp_source.html  bind__handler_8hpp_source.html  build__options_8hpp_source.html  cancellation__token_8hpp_source.html  chrono_8hpp_source.html  classasioext_1_1associated__allocator-members.html  classasioext_1_1associated__allocator.html  classasioext_1_1associated__allocator.js  classasioext_1_1async__result-members.html  classasioext_1_1async__result.html  classasioext_1_1async__result.js  classasioext_1_1basic__file-members.html  classasioext_1_1basic__file.html  classasioext_1_1basic__file.js  classasioext_1_1basic__linear__buffer-members.html  classasioext_1_1basic__linear__buffer.html  classasioext_1_1basic__linear__buffer.js  classasioext_1_1cancellation__token-members.html  classasioext_1_1cancellation__token.html  classasioext_1_1cancellation__token.js  classasioext_1_1cancellation__token__source-members.html  classasioext_1_1cancellation__token__source.html  classasioext_1_1cancellation__token__source.js  classasioext_1_1composed__operation-members.html  classasioext_1_1composed__operation.html  classasioext_1_1composed__operation.js  classasioext_1_1dynamic__linear__buffer-members.html  classasioext_1_1dynamic__linear__buffer.html  (+176 more)
.github/workflows/: build-project.yml
doc/: CMakeLists.txt  asio-web.tag.xml  build_options.hpp  doxyfile.in  implementation.hpp  index.md  layout.xml
example/: CMakeLists.txt  cp.cpp  cp_boost.cpp  simple.cpp
example/cpp03/: BUILD.gn  CMakeLists.txt  cp.cpp  tee.cpp
example/cpp11/: BUILD.gn  CMakeLists.txt  cp.cpp  simple.cpp  socks_http_client.cpp  tee.cpp  tee_async.cpp
include/asioext/: asioext.hpp  associated_allocator.hpp  async_result.hpp  basic_file.hpp  bind_handler.hpp  cancellation_token.hpp  chrono.hpp  compose.hpp  composed_operation.hpp  connect.hpp  duplicate.hpp  error.hpp  error_code.hpp  exception.hpp  execution_context.hpp  file.hpp  file_attrs.hpp  file_handle.hpp  file_perms.hpp  hook_allocator.hpp  io_object_holder.hpp  is_byte_array.hpp  is_char_container.hpp  is_raw_byte_container.hpp  linear_buffer.hpp  open.hpp  open_args.hpp  open_flags.hpp  read_file.hpp  scoped_file_handle.hpp  seek_origin.hpp  standard_streams.hpp  thread_pool_file_service.hpp  unique_file_handle.hpp  unique_handler.hpp  url_view.hpp  version.hpp  work.hpp  write_file.hpp
include/asioext/detail/: asio_version.hpp  async_result.hpp  bind_handler.hpp  bound_handler.hpp  buffer.hpp  buffer_sequence_adapter.hpp  chrono.hpp  config.hpp  coroutine.hpp  cstdint.hpp  enum.hpp  error.hpp  error_code.hpp  handler_type.hpp  is_raw_byte_container.hpp  memory.hpp  move_support.hpp  mutex.hpp  operation.hpp  posix_file_ops.hpp  service_base.hpp  thread.hpp  thread_group.hpp  throw_error.hpp  throw_exception.hpp  type_traits.hpp  url_parser.hpp  win_file_ops.hpp  win_path.hpp  work.hpp
include/asioext/detail/impl/: chrono.hpp  posix_file_ops.cpp  throw_error.cpp  url_parser.cpp  win_file_ops.cpp  win_path.cpp
include/asioext/experimental/: buffered_stream.hpp
include/asioext/impl/: cancellation_token.cpp  chrono.cpp  connect.cpp  connect.hpp  duplicate.cpp  error.cpp  file_attrs.cpp  file_handle.cpp  file_handle.hpp  file_handle_posix.cpp  file_handle_posix.hpp  file_handle_win.cpp  file_handle_win.hpp  file_perms.cpp  linear_buffer.hpp  open.cpp  open_args.hpp  open_flags.cpp  read_file.cpp  read_file.hpp  scoped_file_handle.cpp  scoped_file_handle_posix.cpp  scoped_file_handle_win.cpp  src.cpp  standard_streams.cpp  thread_pool_file_service.cpp  thread_pool_file_service.hpp  unique_file_handle.cpp  unique_handler.cpp  url_view.cpp  write_file.hpp
include/asioext/socks/: client.hpp  constants.hpp  error.hpp
include/asioext/socks/detail/: client.hpp  protocol.hpp
include/asioext/socks/detail/impl/: protocol.cpp
include/asioext/socks/impl/: client.hpp  error.cpp
search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_c.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  (+74 more)
src/: CMakeLists.txt  asio.cpp  asioext.cpp
test/: CMakeLists.txt  basic_file.cpp  chrono.cpp  compose.cpp  composed_operation.cpp  file_handle.cpp  linear_buffer.cpp  main.cpp  open.cpp  open_flags.cpp  read_file.cpp  scoped_file_handle.cpp  scoped_umask.hpp  test_file_rm_guard.cpp  test_file_rm_guard.hpp  test_file_writer.cpp  test_file_writer.hpp  unique_handler.cpp  url_parser.cpp  win_path.cpp  write_file.cpp
